Notifications added/ authorization upgraded

--- a/Android/Ascent/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/Ascent/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/helloFragment"
-        android:name="com.skillbox.ascent.ui.HelloFragment"
+        android:name="com.skillbox.ascent.ui.fragments.hello_fragment.HelloFragment"
         android:label="HelloFragment" >
         <action
             android:id="@+id/action_helloFragment_to_onBoardingFragment"
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_helloFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_helloFragment_to_profileFragment2"
+            app:destination="@id/profileFragment2" />
     </fragment>
     <fragment
         android:id="@+id/onBoardingFragment"
@@ -26,26 +29,40 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.skillbox.ascent.ui.fragments.login_fragment.LoginFragment"
-        android:label="LoginFragment" >
+        android:label="LoginFragment">
         <action
             android:id="@+id/action_loginFragment_to_profileFragment2"
             app:destination="@id/profileFragment2" />
+        <deepLink
+            android:id="@+id/deepLink2"
+            app:uri="ascent://com.skillbox.ascent/login" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment2"
         android:name="com.skillbox.ascent.ui.fragments.profile_fragment.ProfileFragment"
-        android:label="ProfileFragment" >
+        android:label="ProfileFragment">
         <action
             android:id="@+id/action_profileFragment2_to_activitiesFragment2"
             app:destination="@id/activitiesFragment2" />
+        <action
+            android:id="@+id/action_profileFragment2_to_shareFragment"
+            app:destination="@id/shareFragment" />
+
+
     </fragment>
     <fragment
         android:id="@+id/activitiesFragment2"
         android:name="com.skillbox.ascent.ui.fragments.sport_activities.ActivitiesFragment"
-        android:label="ActivitiesFragment" >
+        android:label="ActivitiesFragment">
         <action
             android:id="@+id/action_activitiesFragment2_to_createActivityFragment"
             app:destination="@id/createActivityFragment" />
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="ascent://com.skillbox.ascent/activities" />
+        <action
+            android:id="@+id/action_activitiesFragment2_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/createActivityFragment"
@@ -54,5 +71,13 @@
         <action
             android:id="@+id/action_createActivityFragment_to_activitiesFragment2"
             app:destination="@id/activitiesFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/shareFragment"
+        android:name="com.skillbox.ascent.ui.fragments.share_fragment.ShareFragment"
+        android:label="ShareFragment" >
+        <argument
+            android:name="profile"
+            app:argType="com.skillbox.ascent.data.ascent.models.AscentUser" />
     </fragment>
 </navigation>
