--- a/Android/Ascent/app/src/main/res/layout/fragment_share.xml
+++ b/Android/Ascent/app/src/main/res/layout/fragment_share.xml
@@ -11,8 +11,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contactsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:layout_height="match_parent"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="10"
         tools:listitem="@layout/item_friend" />
@@ -29,7 +29,7 @@
         android:textColor="@color/accent_color_primary"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/allowReadContactsBtn"
@@ -39,6 +39,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="60dp"
         android:text="Allow"
+        android:visibility="gone"
         android:textColor="@color/white"
         app:backgroundTint="@color/accent_color_primary" />
 
