--- a/Android/YourDrive/app/src/main/res/values/colors.xml
+++ b/Android/YourDrive/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="youdrive_color_primary">#809b52</color>
 </resources>
